--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,18 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Daniel Schleicher
+email: 
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  I am a Senior Solutions Architect at AWS, focusing 
+  on software-defined cars. In this field, I am interested in 
+  applying cloud computing principles for automotive applications, 
+  and advancing the software development process of automotive 
+  applications utilizing virtualized hardware.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: schleidl
+github_username:  schleidl
 
 # Build settings
 theme: minima
