--- a/_config.yml
+++ b/_config.yml
@@ -33,9 +33,12 @@ github_username:  schleidl
 google_analytics: G-774R7YQQVY
 
 # Build settings
-theme: minima
+# theme: minima
+remote_theme: jekyll/minima
+
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
